# few-shot-prompt-evaluator-guard

./: .gitignore  README.md  benchmark_dataset_guard.py  benchmark_default_guard.py  benchmark_guards.py  demo_guard.ipynb  lowes_demo.ipynb  nemo_jailbreak_detection_guard.py  pyproject.toml  requirements.txt  self_check_output_script.py
config/: flows.co
dataset_embeddings/: benchmark_dataset_guard.py  gpt-4o-mini_baseline_output.txt  requirements.txt  run.py
dataset_embeddings/config/: actions.py  config.py  dataset.py  flows.co
dataset_guard_config/: actions.py  config.py  config.yml  flows.co
default_jailbreak_guard/: actions.py  config.yml  flows.co
self_check_input_config/: actions.py  config.yml  flows.co  prompts.yml
self_check_output_config/: actions.py  config.yml  flows.co  prompts.yml
